Add tests for lambda